# AI

./: Makefile  README.md  human_input.py  main.py  pyproject.toml  simple_agent.py
examples/: simple_agent.py
examples/fastmcp/: mcps.py  weather.py
examples/langgraph/: simple_agent.py
