[project]
name = "ai"
version = "0.1.0"
description = "Some LangGraph Examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph (>=0.6.4,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.29,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastmcp>=2.11.2",
    "aiohttp>=3.12.15",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
